testimonials-grid-section-main/style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;600&family=Outfit:wght@500&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    
    --moderate-violet: hsl(263, 55%, 52%);
    --dark-grayish-blue: hsl(217, 19%, 35%);
    --very-dark-grayish-blue: hsl(219, 29%, 14%);
    --white :hsl(0, 0%, 100%);
    --light-gray: hsl(0, 0%, 81%);
    --light-grayish-blue: hsl(210, 46%, 95%);

    --bold-color: black;
    --regular-color: black;
}

body {
    background-color: var(--light-grayish-blue);
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
}

a {
    color: inherit;
    text-decoration: none;
}

a:hover {
    color: inherit;
}

.light {
    --bold-color: var(--dark-grayish-blue);
    --regular-color: var(--dark-grayish-blue);
}

.dark {
    --bold-color: var(--white);
    --regular-color: var(--light-gray);
}

/* APP STYLES */

.root {
    padding: 25px;    
    font-size: 14px;
    font-family: "Barlow Condensed";
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 25px;
}

.testimonial-card {
    padding: 25px; 
    border-radius: 10px;
    box-shadow: 10px 10px 10px rgba(0, 0, 0, .1);
    color: var(--regular-color);
}

.profile {
    display: flex;
    gap: 10px;
    margin-bottom: 15px;
    align-items: center;
}

.profile-img {
    border-radius: 100%;
    border: 3px solid var(--light-gray);
    width: 40px;
    height: auto;
}

.profile .name {
    font-weight: 600;
    color: var(--bold-color);
}

.testimonial-card .text .bold {
    font-weight: bold;
    font-size: 18px;
    margin-bottom: 15px;
    color: var(--bold-color);
}

.testimonial-card:nth-child(1) {
    background: 
        var(--moderate-violet)
        url("./images/bg-pattern-quotation.svg") no-repeat 80% 0%;
}

.testimonial-card:nth-child(2) {
    background: var(--white);
}

.testimonial-card:nth-child(3) {
    background: var(--very-dark-grayish-blue);
}

.testimonial-card:nth-child(4) {
    background: var(--dark-grayish-blue);
}

.testimonial-card:nth-child(5) {
    background: var(--white);
}

footer {
    padding: 15px 0;
    font-family: "Outfit";
    font-size: 1.8rem;
}

@media screen and (min-width: 900px) {
    .root {
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: 1fr 1fr;
        max-width: 1100px;
    }

    .testimonial-card:nth-child(1) {
        grid-area: 1 / 1 / 2 / 3;    
    }

    .testimonial-card:nth-child(2) {
        grid-area: 1 / 4 / 3 / 5; 
    }

    .testimonial-card:nth-child(3) {
        grid-area: 2 / 2 / 3 / 4;
    }

    .testimonial-card:nth-child(4) {
        grid-area: 1 / 3 / 2 / 4; 
    }

    .testimonial-card:nth-child(5) {
        grid-area: 2 / 1 / 3 / 2; 
    }
}

